--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,6 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Playfair+Display'>
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto'>
     <link rel="stylesheet" href="./style.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -24,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Java Interview Question Generator</title>
+    <title>Warmup Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
